# anti-resonance

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/anti_resonance/: __init__.py  core.py
tests/: test_core.py
