[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anti-resonance"
version = "0.1.0"
description = ""
authors = [
    { name = "Mnemox AI", email = "dev@mnemox.ai" },
]
requires-python = ">=3.9"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/anti_resonance"]
