[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anti-resonance"
version = "0.2.0"
description = "Counteract positive recall bias in memory-augmented AI systems. Zero dependencies."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Mnemox AI", email = "dev@mnemox.ai" },
]
requires-python = ">=3.9"
dependencies = []
keywords = ["rag", "retrieval", "bias", "memory", "anti-resonance", "llm", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/mnemox-ai/anti-resonance"
Documentation = "https://github.com/mnemox-ai/anti-resonance#readme"
Issues = "https://github.com/mnemox-ai/anti-resonance/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anti_resonance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
